parseTest/target/generated-sources/antlr4/net/sodacan/parseTest/SccParser.java
// Generated from java-escape by ANTLR 4.11.1
package net.sodacan.parseTest;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SccParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MODULE=1, TOPIC=2, PUBLIC=3, PRIVATE=4, TIMER=5, SUBSCRIBE=6, AT=7, ON=8, 
		WITH=9, THEN=10, SEND=11, INT=12, ID=13, COMMENT=14, WS=15, VarCOMMA=16, 
		VarLBRACE=17, VarRBRACE=18, VarTRUE=19, VarFALSE=20, VarAS=21, VarEVENT=22, 
		VarINT=23, VarID=24, VarCOMMENT=25, VarEOL=26, VarWS=27, ModID=28, ModCOMMENT=29, 
		ModEOL=30, ModWS=31, SubDOT=32, SubID=33, SubCOMMENT=34, SubEOL=35, SubWS=36, 
		MONTH=37, AMPM=38, DOW=39, SUNRISE=40, SUNSET=41, SEASON=42, FROM=43, 
		THROUGH=44, HOUR=45, MINUTE=46, BEFORE=47, AFTER=48, CHRISTMAS=49, MIDNIGHT=50, 
		NOON=51, ATON=52, COMMA=53, SEMICOLON=54, COLON=55, AtINT=56, AtCOMMENT=57, 
		AtEOL=58, AtWS=59, OnDOT=60, OnID=61, OnCOMMENT=62, OnEOL=63, OnWS=64, 
		WithLPAREN=65, WithRPAREN=66, WithAND=67, WithOR=68, WithNOT=69, WithDOT=70, 
		WithID=71, WithCOMMENT=72, WithEOL=73, WithWS=74, ThenLPAREN=75, ThenRPAREN=76, 
		ThenAND=77, ThenOR=78, ThenNOT=79, ThenDOT=80, ThenID=81, ThenCOMMENT=82, 
		ThenEOL=83, ThenWS=84, SendDOT=85, SendID=86, SendCOMMENT=87, SendEOL=88, 
		SendWS=89;
	public static final int
		RULE_start = 0, RULE_module = 1, RULE_moduleIdentifier = 2, RULE_statements = 3, 
		RULE_statement = 4, RULE_topicStatement = 5, RULE_timerStatement = 6, 
		RULE_publicStatement = 7, RULE_privateStatement = 8, RULE_varIdentifier = 9, 
		RULE_varType = 10, RULE_varEnum = 11, RULE_varEnumList = 12, RULE_varInt = 13, 
		RULE_varBool = 14, RULE_varEVENT = 15, RULE_subscribeStatement = 16, RULE_atStatement = 17, 
		RULE_onStatement = 18, RULE_onExpression = 19, RULE_onIdentifier = 20, 
		RULE_withStatement = 21, RULE_withExpression = 22, RULE_withIdentifier = 23, 
		RULE_thenStatement = 24, RULE_thenExpression = 25, RULE_thenIdentifier = 26, 
		RULE_sendStatement = 27, RULE_sendExpression = 28, RULE_sendIdentifier = 29, 
		RULE_dateRange = 30, RULE_fromDate = 31, RULE_toDate = 32, RULE_dayExpression = 33, 
		RULE_durationExpression = 34, RULE_quantity = 35, RULE_timeUnitExpression = 36, 
		RULE_relativeTimeExpression = 37, RULE_specificTimeExpression = 38, RULE_timeShortcut = 39, 
		RULE_time = 40, RULE_dateExpression = 41, RULE_specificDate = 42, RULE_date = 43, 
		RULE_year = 44, RULE_month = 45, RULE_dow = 46, RULE_holiday = 47, RULE_day = 48, 
		RULE_season = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "module", "moduleIdentifier", "statements", "statement", "topicStatement", 
			"timerStatement", "publicStatement", "privateStatement", "varIdentifier", 
			"varType", "varEnum", "varEnumList", "varInt", "varBool", "varEVENT", 
			"subscribeStatement", "atStatement", "onStatement", "onExpression", "onIdentifier", 
			"withStatement", "withExpression", "withIdentifier", "thenStatement", 
			"thenExpression", "thenIdentifier", "sendStatement", "sendExpression", 
			"sendIdentifier", "dateRange", "fromDate", "toDate", "dayExpression", 
			"durationExpression", "quantity", "timeUnitExpression", "relativeTimeExpression", 
			"specificTimeExpression", "timeShortcut", "time", "dateExpression", "specificDate", 
			"date", "year", "month", "dow", "holiday", "day", "season"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'MODULE'", "'TOPIC'", "'PUBLIC'", "'PRIVATE'", "'TIMER'", "'SUBSCRIBE'", 
			"'AT'", "'ON'", "'WITH'", "'THEN'", "'SEND'", null, null, null, null, 
			null, "'{'", "'}'", "'TRUE'", "'FALSE'", "'AS'", "'EVENT'", null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "'sunrise'", "'sunset'", null, "'FROM'", "'THROUGH'", 
			null, null, "'before'", "'after'", null, "'midnight'", "'noon'", null, 
			null, "';'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MODULE", "TOPIC", "PUBLIC", "PRIVATE", "TIMER", "SUBSCRIBE", "AT", 
			"ON", "WITH", "THEN", "SEND", "INT", "ID", "COMMENT", "WS", "VarCOMMA", 
			"VarLBRACE", "VarRBRACE", "VarTRUE", "VarFALSE", "VarAS", "VarEVENT", 
			"VarINT", "VarID", "VarCOMMENT", "VarEOL", "VarWS", "ModID", "ModCOMMENT", 
			"ModEOL", "ModWS", "SubDOT", "SubID", "SubCOMMENT", "SubEOL", "SubWS", 
			"MONTH", "AMPM", "DOW", "SUNRISE", "SUNSET", "SEASON", "FROM", "THROUGH", 
			"HOUR", "MINUTE", "BEFORE", "AFTER", "CHRISTMAS", "MIDNIGHT", "NOON", 
			"ATON", "COMMA", "SEMICOLON", "COLON", "AtINT", "AtCOMMENT", "AtEOL", 
			"AtWS", "OnDOT", "OnID", "OnCOMMENT", "OnEOL", "OnWS", "WithLPAREN", 
			"WithRPAREN", "WithAND", "WithOR", "WithNOT", "WithDOT", "WithID", "WithCOMMENT", 
			"WithEOL", "WithWS", "ThenLPAREN", "ThenRPAREN", "ThenAND", "ThenOR", 
			"ThenNOT", "ThenDOT", "ThenID", "ThenCOMMENT", "ThenEOL", "ThenWS", "SendDOT", 
			"SendID", "SendCOMMENT", "SendEOL", "SendWS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SccParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	 
		public StartContext() { }
		public void copyFrom(StartContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class EofStatementContext extends StartContext {
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SccParser.EOF, 0); }
		public EofStatementContext(StartContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterEofStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitEofStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitEofStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			_localctx = new EofStatementContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			module();
			setState(101);
			statements();
			setState(102);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(SccParser.MODULE, 0); }
		public ModuleIdentifierContext moduleIdentifier() {
			return getRuleContext(ModuleIdentifierContext.class,0);
		}
		public TerminalNode ModEOL() { return getToken(SccParser.ModEOL, 0); }
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(MODULE);
			setState(105);
			moduleIdentifier();
			setState(106);
			match(ModEOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleIdentifierContext extends ParserRuleContext {
		public TerminalNode ModID() { return getToken(SccParser.ModID, 0); }
		public ModuleIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterModuleIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitModuleIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitModuleIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleIdentifierContext moduleIdentifier() throws RecognitionException {
		ModuleIdentifierContext _localctx = new ModuleIdentifierContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moduleIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(ModID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	 
		public StatementsContext() { }
		public void copyFrom(StatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StatementListContext extends StatementsContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementListContext(StatementsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterStatementList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitStatementList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitStatementList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statements);
		int _la;
		try {
			_localctx = new StatementListContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 492L) != 0) {
				{
				{
				setState(110);
				statement();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public TopicStatementContext topicStatement() {
			return getRuleContext(TopicStatementContext.class,0);
		}
		public SubscribeStatementContext subscribeStatement() {
			return getRuleContext(SubscribeStatementContext.class,0);
		}
		public TimerStatementContext timerStatement() {
			return getRuleContext(TimerStatementContext.class,0);
		}
		public PublicStatementContext publicStatement() {
			return getRuleContext(PublicStatementContext.class,0);
		}
		public PrivateStatementContext privateStatement() {
			return getRuleContext(PrivateStatementContext.class,0);
		}
		public AtStatementContext atStatement() {
			return getRuleContext(AtStatementContext.class,0);
		}
		public WithStatementContext withStatement() {
			return getRuleContext(WithStatementContext.class,0);
		}
		public ThenStatementContext thenStatement() {
			return getRuleContext(ThenStatementContext.class,0);
		}
		public SendStatementContext sendStatement() {
			return getRuleContext(SendStatementContext.class,0);
		}
		public OnStatementContext onStatement() {
			return getRuleContext(OnStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		int _la;
		try {
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				topicStatement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				subscribeStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				timerStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				publicStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				privateStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(121);
				atStatement();
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITH) {
					{
					setState(122);
					withStatement();
					}
				}

				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==THEN) {
					{
					setState(125);
					thenStatement();
					}
				}

				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEND) {
					{
					setState(128);
					sendStatement();
					}
				}

				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(131);
				onStatement();
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITH) {
					{
					setState(132);
					withStatement();
					}
				}

				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==THEN) {
					{
					setState(135);
					thenStatement();
					}
				}

				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEND) {
					{
					setState(138);
					sendStatement();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopicStatementContext extends ParserRuleContext {
		public TerminalNode TOPIC() { return getToken(SccParser.TOPIC, 0); }
		public VarIdentifierContext varIdentifier() {
			return getRuleContext(VarIdentifierContext.class,0);
		}
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode VarEOL() { return getToken(SccParser.VarEOL, 0); }
		public TopicStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topicStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterTopicStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitTopicStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitTopicStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopicStatementContext topicStatement() throws RecognitionException {
		TopicStatementContext _localctx = new TopicStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_topicStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(TOPIC);
			setState(144);
			varIdentifier();
			setState(145);
			varType();
			setState(146);
			match(VarEOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TimerStatementContext extends ParserRuleContext {
		public TerminalNode TIMER() { return getToken(SccParser.TIMER, 0); }
		public VarIdentifierContext varIdentifier() {
			return getRuleContext(VarIdentifierContext.class,0);
		}
		public TerminalNode VarEOL() { return getToken(SccParser.VarEOL, 0); }
		public TimerStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timerStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterTimerStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitTimerStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitTimerStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimerStatementContext timerStatement() throws RecognitionException {
		TimerStatementContext _localctx = new TimerStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_timerStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(TIMER);
			setState(149);
			varIdentifier();
			setState(150);
			match(VarEOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PublicStatementContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(SccParser.PUBLIC, 0); }
		public List<VarIdentifierContext> varIdentifier() {
			return getRuleContexts(VarIdentifierContext.class);
		}
		public VarIdentifierContext varIdentifier(int i) {
			return getRuleContext(VarIdentifierContext.class,i);
		}
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode VarEOL() { return getToken(SccParser.VarEOL, 0); }
		public TerminalNode VarAS() { return getToken(SccParser.VarAS, 0); }
		public PublicStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_publicStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterPublicStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitPublicStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitPublicStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PublicStatementContext publicStatement() throws RecognitionException {
		PublicStatementContext _localctx = new PublicStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_publicStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(PUBLIC);
			setState(153);
			varIdentifier();
			setState(154);
			varType();
			{
			setState(155);
			match(VarAS);
			setState(156);
			varIdentifier();
			}
			setState(158);
			match(VarEOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrivateStatementContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(SccParser.PUBLIC, 0); }
		public VarIdentifierContext varIdentifier() {
			return getRuleContext(VarIdentifierContext.class,0);
		}
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode VarEOL() { return getToken(SccParser.VarEOL, 0); }
		public PrivateStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_privateStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterPrivateStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitPrivateStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitPrivateStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrivateStatementContext privateStatement() throws RecognitionException {
		PrivateStatementContext _localctx = new PrivateStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_privateStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(PUBLIC);
			setState(161);
			varIdentifier();
			setState(162);
			varType();
			setState(163);
			match(VarEOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarIdentifierContext extends ParserRuleContext {
		public TerminalNode VarID() { return getToken(SccParser.VarID, 0); }
		public VarIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varIdentifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterVarIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitVarIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitVarIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarIdentifierContext varIdentifier() throws RecognitionException {
		VarIdentifierContext _localctx = new VarIdentifierContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(VarID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarTypeContext extends ParserRuleContext {
		public VarEnumContext varEnum() {
			return getRuleContext(VarEnumContext.class,0);
		}
		public VarIntContext varInt() {
			return getRuleContext(VarIntContext.class,0);
		}
		public VarBoolContext varBool() {
			return getRuleContext(VarBoolContext.class,0);
		}
		public VarEVENTContext varEVENT() {
			return getRuleContext(VarEVENTContext.class,0);
		}
		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).enterVarType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SccParserListener ) ((SccParserListener)listener).exitVarType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SccParserVisitor ) return ((SccParserVisitor<? extends T>)visitor).visitVarType(this);
			else return visitor.visitChildren(this);
		}
	}
